Update 225. Reformat Project.